// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<Fragment>
  <WithStyles(FormControl)
    error={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      id="undefined-label"
    />
    <WithStyles(WithFormControlContext(Select))
      autoWidth={true}
      error={false}
      floatingLabelText="This is a test selectfield component"
      fullWidth={true}
      id="undefined"
      inputProps={
        Object {
          "aria-labelledby": "undefined-label",
          "id": undefined,
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
  </WithStyles(FormControl)>
</Fragment>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<Fragment>
  <WithStyles(FormControl)
    error={true}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      id="undefined-label"
    />
    <WithStyles(WithFormControlContext(Select))
      autoWidth={true}
      error={true}
      floatingLabelText="test selectfield component"
      fullWidth={true}
      id="undefined"
      inputProps={
        Object {
          "aria-labelledby": "undefined-label",
          "id": undefined,
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
    <WithStyles(WithFormControlContext(FormHelperText))>
      Something bad happened
    </WithStyles(WithFormControlContext(FormHelperText))>
  </WithStyles(FormControl)>
</Fragment>
`;
